deleted debugger and fixed play button mobile

--- a/style.css
+++ b/style.css
@@ -500,6 +500,6 @@ img.track {
     }
     .gamebtn{
         margin-bottom: 1vh;
-        width: 400px;
+        width: 375px;
     }
 }
